--- a/public/css/Component/Customer/Customer_Dashboard.css
+++ b/public/css/Component/Customer/Customer_Dashboard.css
@@ -693,6 +693,7 @@ font-size: 13px;
         align-items: center;
         justify-content: center;
         margin-left: 30%;
+        margin-right: -1%;
     }
 
     .dot {
@@ -752,7 +753,6 @@ font-size: 13px;
         padding-left: 10px;
         font-size: 14px;
         cursor: pointer;
-
     }
 
     .notification:hover {
@@ -769,7 +769,7 @@ font-size: 13px;
 
     .main-right-top-profile {
         display: flex;
-        margin-right: 40px;
+        margin-right: 22px;
     }
 
     .main-right-top-profile img {
