--- a/public/css/Component/Customer/Customer_Request_Cancelled.css
+++ b/public/css/Component/Customer/Customer_Request_Cancelled.css
@@ -8,65 +8,32 @@
         font-family: inter;
     }
 
+
+    #cancelled p {
+        color: var(--green-color-two);
+        font-weight: bold;
+    }
+
+    #cancelled .line {
+        background-color: var(--green-color-two);
+    }
+
     a {
         text-decoration: none;
         color: inherit;
     }
 
-    .main-right-bottom-top {
-        padding-left: 1%;
-        width: 99%;
-    }
-
-    .main-right-bottom-down {
-        width: 99%;
-        height: 500px;
-        overflow: scroll;
-        padding-left: 1%;
-    }
-
-    .table {
-        padding-left: 1%;
-        width: 99%;
-        border-collapse: collapse;
-        text-align: center;
-        padding-left: 1%;
-    }
 
     .table-header {
-
-        font-size: 17px;
-        font-family: Montserrat;
-        text-align: center;
-        height: 55px;
-        display: grid;
         grid-template-columns: 10% 11% 9% 11% 14% 11% 14% 20%;
-    }
-
-    .table-header th {
-        display: flex;
-        align-items: center;
-        justify-content: center;
     }
 
     .table-row {
-        font-size: 1px;
-        font-family: Montserrat;
-        text-align: center;
-        height: 52px;
-        display: grid;
         grid-template-columns: 10% 11% 9% 11% 14% 11% 14% 20%;
-        border-bottom: 2px solid #CACACA;
     }
 
     .table td {
-        height: 50px;
-        font-size: 17px;
-        vertical-align: middle;
-        text-align: center;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        height: 55px;
     }
 
     .table-row img {
@@ -75,54 +42,8 @@
         cursor: pointer;
     }
 
-    .location_pop {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.7);
-        z-index: 1;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-    }
 
     /*Location Pop*/
-    .location_pop_content {
-        width: 47%;
-        height: 55%;
-        padding: 10px;
-        background-color: #f1f2f6;
-        border-radius: 10px;
-        padding: 20px;
-        padding-bottom: 40px;
-    }
-
-    .location_pop_map {
-        width: 100;
-        height: 100%;
-        border-radius: 10px;
-    }
-
-    .location_close {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-top: 6px;
-    }
-
-    .location_close button {
-        background-color: #ff4757;
-        height: 28px;
-        color: #fff;
-        cursor: pointer;
-        border: none;
-        font-size: 16px;
-        border-radius: 5px;
-        width: 85px;
-    }
 
     /* ------ */
 
